app/assets/stylesheets/canvasstylesheet.css
td img{
	width:450px;
	height:250px;
}

table, td {
	border: 5px white solid;
}


*{ font-family: 'Raleway', sans-serif; }
/*h1 { font-family: 'Raleway', sans-serif; }
li {font-family: 'Raleway', sans-serif;}*/

